# lxio-pico-clone-with-footpcb

./: CMakeLists.txt  LICENSE  README.md  main.c  other_drivers.c  true_lxio_config.h  true_lxio_structs.h  true_lxio_ws2812.c  true_lxio_ws2812.h  true_lxio_ws2812_helpers.h  tusb_config.h  usb_descriptors.c  usb_descriptors.h
